:mamo: alignment issue fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,10 @@
+body {
+    background-color: rgb(238, 236, 235);
+}
 nav {
   display: flex;
   justify-content: space-between;
-  margin: 50px;
+  margin: 30px;
 }
 nav ul {
   list-style: none;
@@ -30,6 +33,7 @@ nav ul li {
     width: 100%;
     padding-top: 80px;
     text-align: center;
+    margin-bottom: 100px;
 }
 .banner-btn{
     color: rgba(70, 145, 101, 1);
@@ -64,15 +68,20 @@ nav ul li {
     color: rgba(70, 145, 101, 1);
 }
 .notes-container{
+    padding-top: 50px;
+    padding-bottom: 50px;
     text-align: center;
     border-radius: 8px;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.06);
+    max-width: 80%;
+    margin: 0 auto ;
 }
 .notes-image{
     background: rgba(249, 85, 85, 1);
     border-radius: 100px;
     width: 60px;
     height: 50px; 
+    margin: auto;
 }
 .notes-item-container{
     display: flex;
@@ -85,7 +94,7 @@ nav ul li {
     display: flex;
     text-align:center;
     align-items: center;
-    margin: auto;
+    margin-top: 100px;
 
 }
 
@@ -118,7 +127,7 @@ nav ul li {
     max-width: 80%;
     margin: auto;
 }
-.Early-Access-section{
+.early-access-section{
     border-radius: 12px;
     background: rgba(247, 246, 242, 1);
     align-items: center;
@@ -126,12 +135,12 @@ nav ul li {
     padding: 80px 40px 80px 40px;
     flex-direction: column;
     text-align: center;
-    
-    /* gap: 30; */
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 
-.Early-Access-btn{
-    /* box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15); */
+.early-access-btn{
     background: rgba(70, 145, 101, 1);
     color: #fff;
     padding: 15px 20px 15px 20px;
@@ -140,13 +149,19 @@ nav ul li {
     align-items: center;
     border-radius: 4px;
     height: 55px;
+    margin-top: 30px;
 }
-.Early-Access-description-two{
+.early-access-description{
     font-size: 16px;
     font-weight: 500;
     font-family: Inter;
     font-style: normal;
     text-align: center;
     height: 20px;
+    color: rgba(98, 115, 130, 1);
 }
+/* .footer-section li{
+    display: flex;
+    list-style: none;
+} */
 
